# imaginator

./: .gitignore  CMakeLists.txt  imaginator.code-workspace
include/: BmpConverter.hpp  BmpData.hpp  ImageConverter.hpp  ImageData.hpp  ImagePixel.hpp  JpegConverter.hpp  PngConverter.hpp
sources/: BmpConverter.cpp  BmpData.cpp  ImageConverter.cpp  ImageData.cpp  ImagePixel.cpp  JpegConverter.cpp  Main.cpp  PngConverter.cpp
